<resources>
    <string name="app_name">External Gradle App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="okhttp_request">Make OkHttp request</string>
    <string name="crash_jvm">Crash JVM</string>
    <string name="crash_native">Crash Native</string>
</resources>